--- a/.github/workflows/scrap_tournament.yml
+++ b/.github/workflows/scrap_tournament.yml
@@ -2,7 +2,7 @@ name: Tournament availability
 
 on:
   schedule:
-    - cron: "0 0 */2 * *" # Runs every 2 days at midnight UTC
+    - cron: '0 0 * * *' # Runs at 00:00 UTC every day
   workflow_dispatch: # Allows manual trigger from the GitHub Actions UI
 
 jobs:
